data/derived/fa15/progs/unify/prog3909.ml.out
Characters 78-89:
  | h::t -> matchHeads (explode w);;
                       ^^^^^^^^^^^
Error: This expression has type char list
       but an expression was expected of type 'a list list
       Type char is not compatible with type 'a list 
